Fix:		Improved readability dark mode

--- a/private/sass/base.scss
+++ b/private/sass/base.scss
@@ -12,3 +12,7 @@
 .sr-only {
     @include visually-hidden
 }
+
+.djangocms-frontend {
+    color-scheme: dark light;
+}
