--- a/private/sass/button_group.scss
+++ b/private/sass/button_group.scss
@@ -43,14 +43,17 @@ form .form-row  div.frontend-button-group {
         width: 3.5em !important;
         padding-left: 0 !important;;
         padding-right: 0 !important;
-        color: black !important;
+        color: white !important;
         overflow: hidden;
         white-space: nowrap;
         background: rgba(var(--bs-secondary-rgb), calc(var(--fe-value) / 100));
     }
-    & > input[property="opacity"][value="100"]+label.btn-grp,
-    & > input[property="opacity"][value="75"]+label.btn-grp {
-        color: white !important;
+    & > input[property="opacity"][value="50"]+label.btn-grp,
+    & > input[property="opacity"][value="25"]+label.btn-grp,
+    & > input[property="opacity"][value="10"]+label.btn-grp {
+        @media (prefers-color-scheme: light) {
+            color: black !important;
+        }
     }
     & > input[property="list_state"][value="active"]+label.btn-grp {
         background: var(--bs-primary);
@@ -101,6 +104,14 @@ form .form-row  div.frontend-button-group {
 
         }
     }
+    .btn-white {
+        background: var(--bs-secondary);
+        color: white;
+    }
+    .btn-light {
+      color: black !important;
+    }
+
     .btn-transparent {
         color:  black;
         @media (prefers-color-scheme: dark) {
