--- a/private/sass/components/_variables.scss
+++ b/private/sass/components/_variables.scss
@@ -1,2 +1,3 @@
 $cms-primary: #0bf;
 $cms-gray: #ddd;
+$dark-fg: white;
